# kotlin_prac

./: .gitignore  README.md
.github/workflows/: blank.yml
drive_back/: dockerfile  pyproject.toml
drive_front/: .gitignore  README.md  package-lock.json  package.json
drive_front/src/components/: Board.vue  Road.vue
drive_front/src/components/Button/: StartButton.vue  StopButton.vue  VButton.vue
drive_front/src/views/: HomeView.vue
drive_java/: build.gradle  settings.gradle
drive_java/src/main/java/com/autodrive/autodrive/: AutodriveApplication.java
drive_java/src/main/resources/: application.yml
drive_java/src/test/java/com/autodrive/autodrive/: AutodriveApplicationTests.java
udemy/: build.gradle.kts
udemy/scripts/: start.sh  stop.sh
udemy/src/main/kotlin/com/hi/udemy/: Entites.kt  HtmlController.kt  Repositories.kt  UserController.kt
udemy/src/main/kotlin/com/hi/udemy/user/dto/req/: LoginRequestDto.kt
udemy/src/main/kotlin/com/hi/udemy/user/dto/res/: LoginResponseDto.kt
udemy/src/main/resources/: application.properties  application.yml
udemy/src/main/resources/templates/: index.html  login.html  sign.html
udemy/src/test/kotlin/com/hi/udemy/: UdemyApplicationTests.kt
