[tool.poetry]
name = "drive-back"
version = "0.1.0"
description = ""
authors = ["이신애 <gosin77@snu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
